
	-Added Comments to global.h file (no code added)

2/23/2019 - Alex
	-detached input and processing threads
	-Explicitly set expected array in process_thread() to all zeros
	-Included <string.h> in global.h file in order to use memset()
	-Included <math.h> in order to use in algorithm Files
	-Modified (added -lm) Makefile to work with <math.h> functions 

	Files modified: framework.c, global.h, Makefile

2/23/2019 - Regi
	- Implemented function to change the seed of rand(), so that our results aren't skewed towards a single data set
	- changed minimum payload size to 0, since there are packets that just transfer the header with no payload.
		- minimum packet struct size is now 24 and max is 9024 (in terms of bytes)
	- set expected[], line 96 in framework.c, to the order of the first packet it recieved 
	- moved original algorithm.c (singe wire algorithm) to newly created algorithm folder and renamed it to singleWire.c
	- detached main algorithm thread
	- defined HEADER_SIZE 24, line 36 in global.h. Defines first 24 bytes in packet header
	- changed length variable of packet to correspond to payload size instead of header size
	- implemented some error handling in the framework
	- changed globally defined variable to be represented in bytes. There was an issue in regards to calculating the size of the structures and the size
		in terms of bits and bytes were not consistent. I chose bytes since that's what most functions will use when calculating size.
	- tried testing out memcpy() for the current algorithm, but there seems to be issues possibly because of thread premption or memory ordering

	Files modified: framework.c, global.h
	
2/24/2019 - Lito
	- changed this line $(CC) $(LDFLAGS) -c -o $@ $< $(CFLAGS)
	  $(CC) $(LDFLAGS) -std=c99 -c -o $@ $< $(CFLAGS)
	  So that the for loops don't have issues building on linux
	- changed asm to __asm__ because this is required for c99 as well.
	Files Modified: Makefile, global.h, testScript.sh
	
	