@@ -55,5 +55,14 @@ Files modified: framework.c, global.h, algorithm.c, algorithm.h
 	  So that the for loops don't have issues building on linux
 	- changed asm to __asm__ because this is required for c99 as well.
 	Files Modified: Makefile, global.h, testScript.sh
+
+2/27/2019 - Alex
+	-Removed duplicated code and optimized processing queues.
+	-Added Processing test limit algorithm
+	-Removed Unneccessary functions
+	-Added new exit conditions for framework
+	-Changed framework to run for 10 seconds after waiting 3 seconds for ramp up, then recording average number of packets passed
+
+	File modified: global.h global.c framework.c algorithm.h
 	
 	
